web/libraries/fractal/components/tests/tag/pass/from.twig
{% import '@fractal/tests/tags/fail/macro.twig' as forms %}

<p>{{ forms.input('username') }}</p>


{# Should output an input... Doesn't.  #}
